# CMake

cmake_tutorials/module1/: Learnings.txt  main.cpp
cmake_tutorials/module2/: learnings.txt
cmake_tutorials/module2/module2.1/: CMakeLists.txt  print_result.h
cmake_tutorials/module2/module2.2/: CMakeLists.txt  addition.cpp  print_result.cpp
cmake_tutorials/module3/: CMakeLists.txt  Learnings.txt  main.cpp
cmake_tutorials/module3/lib/math/: CMakeLists.txt
cmake_tutorials/module3/lib/math/src/: addition.cpp
cmake_tutorials/module3/lib/print_result/: CMakeLists.txt
cmake_tutorials/module3/lib/print_result/src/: print_result.cpp
cmake_tutorials/module4/: CMakeLists.txt
cmake_tutorials/module5/: functions_CMakeLists.txt  if_else_CMakeLists.txt  loops_CMakeLists.txt  macros_CMakeLists.txt  scopes_CMakeLists.txt
